[package]
name = "smallchat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
src = "src/server.rs"
name = "server"



[dependencies]
crossbeam = "0.8.2"
futures = "0.3.29"
tokio = {version = "1.34.0", features = ["full"]}
